--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -180,6 +180,7 @@
     <ClCompile Include="src\PhysicsSystem.cpp" />
     <ClCompile Include="src\RenderingSystem.cpp" />
     <ClCompile Include="src\ControllerInput.cpp" />
+    <ClCompile Include="src\PlayerProperties.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -619,6 +620,7 @@
     <ClInclude Include="src\PhysicsSystem.h" />
     <ClInclude Include="src\RenderingSystem.h" />
     <ClInclude Include="src\Transform.h" />
+    <ClInclude Include="src\PlayerProperties.h" />
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\container.jpg" />
