--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -102,6 +102,9 @@
     <ClCompile Include="src\GameState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\PlayerProperties.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".gitignore" />
@@ -1405,6 +1408,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\Boilerplate\OBJ_Loader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\PlayerProperties.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
