--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -177,6 +177,7 @@
     <ClCompile Include="src\Boilerplate\glad.c" />
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\NavMesh.cpp" />
     <ClCompile Include="src\PhysicsSystem.cpp" />
     <ClCompile Include="src\RenderingSystem.cpp" />
     <ClCompile Include="src\ControllerInput.cpp" />
@@ -617,6 +618,8 @@
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\GameState.h" />
     <ClInclude Include="src\Boilerplate\OBJ_Loader.h" />
+    <ClInclude Include="src\NavMesh.h" />
+    <ClInclude Include="src\Node.h" />
     <ClInclude Include="src\PhysicsSystem.h" />
     <ClInclude Include="src\RenderingSystem.h" />
     <ClInclude Include="src\Transform.h" />
