--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -168,7 +168,8 @@
     <ClCompile Include="snippetvehicle2common\serialization\SerializationCommon.cpp" />
     <ClCompile Include="snippetvehicle2common\SnippetVehicleHelpers.cpp" />
     <ClCompile Include="src\AiController.cpp" />
-    <ClCompile Include="src\AudioEngine.cpp" />
+    <ClCompile Include="src\AudioManager.cpp" />
+    <ClCompile Include="src\Boilerplate\AudioEngine.cpp" />
     <ClCompile Include="src\Boilerplate\Mesh.cpp" />
     <ClCompile Include="src\Boilerplate\Shader.cpp" />
     <ClCompile Include="src\Boilerplate\Shadow.cpp" />
@@ -611,7 +612,8 @@
     <ClInclude Include="snippetvehicle2common\serialization\SerializationCommon.h" />
     <ClInclude Include="snippetvehicle2common\SnippetVehicleHelpers.h" />
     <ClInclude Include="src\AiController.h" />
-    <ClInclude Include="src\AudioEngine.h" />
+    <ClInclude Include="src\AudioManager.h" />
+    <ClInclude Include="src\Boilerplate\AudioEngine.h" />
     <ClInclude Include="src\Boilerplate\Cube.h" />
     <ClInclude Include="src\Boilerplate\Shadow.h" />
     <ClInclude Include="src\Boilerplate\Mesh.h" />
