--- a/585Game/imgui.ini
+++ b/585Game/imgui.ini
@@ -19,7 +19,7 @@ Size=527,434
 Collapsed=0
 
 [Window][Super Space Salvagers - Debug Menu]
-Pos=171,0
-Size=537,480
-Collapsed=1
+Pos=68,-5
+Size=537,476
+Collapsed=0
 
