--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -1452,6 +1452,9 @@
     <ClInclude Include="src\ParticleSystem.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Image Include="assets\textures\container.jpg">
@@ -1461,6 +1464,9 @@
       <Filter>Resource Files</Filter>
     </Image>
     <Image Include="assets\textures\alien.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="..\..\..\Game Development\Projects\585 Project\UI\Textures\icon_sss.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
@@ -1477,5 +1483,10 @@
     <Text Include="src\Cel Shader\shaderCelVertex.txt" />
     <Text Include="src\Cel Shader\shaderOutlineFragment.txt" />
     <Text Include="src\Cel Shader\shaderOutlineVertex.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="585Game.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
