--- a/585Game/585Game.vcxproj
+++ b/585Game/585Game.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="src\Boilerplate\stb_image.cpp" />
     <ClCompile Include="src\Boilerplate\Window.cpp" />
     <ClCompile Include="src\Boilerplate\glad.c" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\GameState.cpp" />
     <ClCompile Include="src\main.cpp">
       <AdditionalIncludeDirectories Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(SolutionDir)\libraries\fmod\studio\inc;$(SolutionDir)\libraries\fmod\core\inc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
@@ -625,6 +626,7 @@
     <ClInclude Include="src\Boilerplate\Shader.h" />
     <ClInclude Include="src\Boilerplate\Timer.h" />
     <ClInclude Include="src\Boilerplate\Window.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Entity.h" />
     <ClInclude Include="src\GameState.h" />
     <ClInclude Include="src\Boilerplate\OBJ_Loader.h" />
