--- a/585Game/585Game.vcxproj.filters
+++ b/585Game/585Game.vcxproj.filters
@@ -1472,7 +1472,7 @@
     <Image Include="assets\textures\alien.png">
       <Filter>Resource Files</Filter>
     </Image>
-    <Image Include="..\..\..\Game Development\Projects\585 Project\UI\Textures\icon_sss.ico">
+    <Image Include="assets\textures\icon_sss.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
