--- a/585Game/imgui.ini
+++ b/585Game/imgui.ini
@@ -19,7 +19,7 @@ Size=527,434
 Collapsed=0
 
 [Window][Super Space Salvagers - Debug Menu]
-Pos=154,-1
+Pos=192,1
 Size=705,372
-Collapsed=0
+Collapsed=1
 
